2006-05-17  Lillian Angel  <langel@redhat.com>

	* java/awt/font/ImageGraphicAttribute.java:
	Documented entire class.
	(ImageGraphicAttribute): Changed to call this.
	(ImageGraphicAttribute): Implemented.
	(draw): Implemented.
	(equals): Implemented.
	(getAdvance): Implemented.
	(getAscent): Implemented.
	(getBounds): Implemented.
	(getDescent): Implemented.
	(hashCode): Implemented.
	* javax/swing/text/html/HTMLDocument.java
	(create): Removed. Sufficent enough for
	super to be called.
	(insert): Likewise.
	(insertUpdate): Likewise.
	(processHTMLFrameHyperlinkEvent): Marked as stub.
	(start): Removed FIXME.
	(end): Likewise.
	(start): Called super. 
	(end): Called super.
	(getElement): removed unneeded code.
	(setParagraphAttribute): Removed. Sufficent enough
	for super to be called.
	(fireChangedUpdate): Likewise.
	(fireUndoableEditUpdate): Likewise.	

2006-05-17  Lillian Angel  <langel@redhat.com>

	* java/awt/TexturePaint.java:
	Added documentation for class and all functions.
	(getTransparency): Implemented.

2006-05-17  Roman Kennke <kennke@aicas.com>

	* java/awt/LightweightDispatcher.java
	(findTarget): Translate point to child components.

2006-05-17  Roman Kennke <kennke@aicas.com>

	PR 26368
	* javax/swing/text/GapContent.java
	(GapContentPosition): Do no more implement Comparable.
	(GapContentPosition.mark): Removed field.
	(GapContentPosition.index): New field to hold the index into
	the positions array.
	(GapContentPosition(int)): Rewritten to use the new indirection
	to the positions array.
	(GapContentPosition.compareTo): Removed.
	(GapContentPosition.getOffset): Synchronized. Fetch mark from
	positionMarks array.
	(WeakPositionComparator): Removed obsolete class.
	(positions): Changed type to WeakHashMap.
	(positionMarks): New field, holds the marks of the positions.
	(GapContent): Initialize new fields.
	(createPosition): Rewritten to use the new indirection
	to the positions array.
	(getPositionsInRange): Rewritten to use the new indirection